; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_tasn_new.c_asn1_template_clear.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_tasn_new.c_asn1_template_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@ASN1_TFLG_ADB_MASK = common dso_local global i32 0, align 4
@ASN1_TFLG_SK_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, %struct.TYPE_3__*)* @asn1_template_clear to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @asn1_template_clear(i32** %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  store i32** %0, i32*** %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @ASN1_TFLG_ADB_MASK, align 4
  %9 = load i32, i32* @ASN1_TFLG_SK_MASK, align 4
  %10 = or i32 %8, %9
  %11 = and i32 %7, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32**, i32*** %3, align 8
  store i32* null, i32** %14, align 8
  br label %22

15:                                               ; preds = %2
  %16 = load i32**, i32*** %3, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @ASN1_ITEM_ptr(i32 %19)
  %21 = call i32 @asn1_item_clear(i32** %16, i32 %20)
  br label %22

22:                                               ; preds = %15, %13
  ret void
}

declare dso_local i32 @asn1_item_clear(i32**, i32) #1

declare dso_local i32 @ASN1_ITEM_ptr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
